   * Changed: Avoid listboxes to handle mouse clicks twice.
   * Fixed bug #22144 + #22046: An assertion failure with empty labels in
     a listbox.
   * The :inspect dialog now uses the same function as saved games to generate
     WML in text form instead of a simplified version.
   * Added a button to copy the currently displayed content from the :inspect
     dialog to clipboard.
   * Added a button to copy the in-game Chat Log dialog contents to clipboard.
   * Fixed the WML load error dialog not displaying an add-on name instead of
     falling back to its directory name if the add-on contains an outdated
     _info.cfg file lacking an [info]title= value.
   * Fixed most of the minimap buttons and the End Turn button appearing
     without contents or in the wrong state during WML start events until they
     are interacted with or control is given to the player for the first time.
   * Added a new subdialog in Preferences to clean or purge the WML cache.
   * Fixed AI engine names in the MP game setup screen being translated to the
     language selected when Wesnoth was started rather than the current
     language (bug #22092).
   * Added a new "Advanced Settings" button and dialog to campaign select.
   * Added new wml attributes to listbox: has_minimum and has_maximum.
   * Added a "Disable automatic moves" preference to disable automatic movements 
     at the begining of a turn.
   * In the dialog layout code, fixed the button padding  (bug #22379).
   * Fixed mouse tracking issue with workaround by changing the default window
     resolution for OS X to 800 x 600 (bug #20332).
   * Removed the "Replay viewer" text label from the replay controller theme,
     because it caused problems for translators and was unnecessary
   * Fixed bug #22337: Bug in inspect long arrays
 * WML engine:
   * Added customizable recall costs for unit types and individual units,
     using the new recall_cost attribute in [unit_type] and [unit].