@@ -105,6 +105,8 @@ Version 1.13.0-dev:
      WML in text form instead of a simplified version.
    * Added a button to copy the currently displayed content from the :inspect
      dialog to clipboard.
+   * WML array elements are now displayed with subscripts in the :inspect
+     dialog.
    * Added a button to copy the in-game Chat Log dialog contents to clipboard.
    * Fixed the WML load error dialog not displaying an add-on name instead of
      falling back to its directory name if the add-on contains an outdated
